Update pointer for subs/submodules/shell_scripts

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "subs/submodules/txt_scripts"]
 	path = subs/submodules/txt_scripts
 	url = git@github.com:edftechnology/txt_scripts.git
+[submodule ".github/workflows"]
+	path = .github/workflows
+	url = git@github.com:edftechnology/workflows.git
