Update pointer for subs/submodules/shell_scripts

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".github/workflows"]
 	path = .github/workflows
 	url = git@github.com:edftechnology/workflows.git
+[submodule ".vscode"]
+	path = .vscode
+	url = git@github.com:edftechnology/.vscode.git
